--- a/index.html
+++ b/index.html
@@ -116,14 +116,11 @@
         			return contentArray.join(" | ");
     			}
 
-    			// Garder uniquement les éléments qui ne sont pas des mots-clés
-				const contenuFiltre = contenu
-    				.split("\n")
-    				.map((champ) => champ.replace(/[\u200B-\u200D\uFEFF]/g, "").trim())
-    				.filter((champ) => 
-        				champ !== "" && 
-        				!motsInterdits.some(mot => mot.toLowerCase() === champ.toLowerCase())
-    				);
+    			// Découpage par "|", nettoyage et filtrage
+    			const contenuFiltre = contenu
+        			.split("|")
+        			.map((champ) => champ.trim())
+        			.filter((champ) => champ !== "" && !motsInterdits.includes(champ));
 
     			return [...contentArray, ...contenuFiltre].join(" | ");
 			}
