--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     			}
 
     			// Découpage par "|", nettoyage et filtrage
+				console.log("Titre du film :", film.title);
     			const contenuFiltre = contenu
         			.split("|")
         			.map((champ) => champ.trim())
