--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     			}
 
     			// Découpage par "|", nettoyage et filtrage
-				console.log("Titre du film :", film.title);
+				console.log("Titre du film :", film.titre);
     			const contenuFiltre = contenu
         			.split("|")
         			.map((champ) => champ.trim())
