--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 
     					// Description en noir sans fond
     					const description = document.createElement("span");
+						description.className = "description";
     					description.textContent = attr.Description;
     					description.style.color = "#000000";
     					description.style.backgroundColor = "transparent";
