--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </a>
 </header>
 <main>
-<div id="legende"></div>
+<div id="legende" class="legende-container"></div>
 <p class="textlegende">Vente de billets sur place seulement, pour la séance en cours, aux personnes présentes</p>
 <div id="films"></div>
 <div class="modal" id="videoModal" style="display:none;">
