--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 					const defaultFontColor = "#666666";
 					const defaultBackgroundColor = "#eeeeee";
 
-					onst attributsCouleurs = {}; // ← à utiliser dans styliserAttribut
+					const attributsCouleurs = {}; // ← à utiliser dans styliserAttribut
 
 					data.legende.forEach((attr) => {
     					const wrapper = document.createElement("span");
