--- a/index.html
+++ b/index.html
@@ -203,12 +203,8 @@
         			} else if (attributsCouleurs[attr]) {
             			// Style personnalisé depuis la légende
             			const couleur = attributsCouleurs[attr];
-            			span.style.backgroundColor = couleur.BackgroundColor || "#ccc";
-            			span.style.color = couleur.FontColor || "#000";
-            			span.style.padding = "4px 8px";
-            			span.style.marginRight = "5px";
-            			span.style.borderRadius = "4px";
-            			span.style.display = "inline-block";
+            			span.style.backgroundColor = couleur.BackgroundColor || "#eee";
+            			span.style.color = couleur.FontColor || "#666";
         			}
         			// Sinon, on garde le style par défaut via la classe CSS
 
