--- a/index.html
+++ b/index.html
@@ -196,10 +196,12 @@
             			span.style.backgroundColor = "red";
             			span.style.color = "white";
             			span.style.padding = "4px 8px";
-            			span.style.marginRight = "5px";
+						span.style.verticalAlign = "middle";
             			span.style.borderRadius = "0";
             			span.style.display = "inline-block";
             			span.style.fontWeight = "bold";
+						span.style.height = "100%";
+						
         			} else if (attributsCouleurs[attr]) {
             			// Style personnalisé depuis la légende
 						const couleur = attributsCouleurs[attr];
