--- a/index.html
+++ b/index.html
@@ -257,6 +257,9 @@
         					fontColor: attr.FontColor || defaultFontColor
     					};
 					});
+					
+					// 🔍 Vérification dans la console
+					console.log("attributsCouleurs :", attributsCouleurs);
 
 					const container = document.getElementById("films");
 					// 📅 Date du jour à Toronto au format YYYY-MM-DD
