--- a/index.html
+++ b/index.html
@@ -577,7 +577,8 @@ window.addEventListener('load', () => {
   applyClamp();
   handleResize();
 });	
-</script></body>
+<script src="script.js?v=3"></script>
+</body>
 </html>
 
 
