--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ window.addEventListener('load', () => {
   applyClamp();
   handleResize();
 });	
-<script src="script.js?v=3"></script>
+</script>
 </body>
 </html>
 
